[package]
name = "matching"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
unordered-pair = "0.2.4"
log = { workspace = true }
pathfinding = "4.9.1"
rustc-hash = "2.1.3"
tracing = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
parsing = { path = "../parsing" }
