[package]
name = "parsing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.25.8"
tree-sitter-java = "0.23.5"
tree-sitter-c-sharp = "0.23.1"
regex = "1.10.5"
model = { path = "../model" }
parsing_handlers = { path = "../parsing_handlers" }
log = { workspace = true }
uuid = { workspace = true }
